--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+      AWS_COGNITO_USER_POOL_ID: "eu-north-1_doDv5DlNW"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "er71ddu3i21h3m2kgh2krmkck"
     build: ./backend-flask
     ports:
       - "4567:4567"
